@@ -1,4 +1,4 @@
-#	$OpenBSD: ssh-com-client.sh,v 1.3 2002/04/10 08:45:30 markus Exp $
+#	$OpenBSD: ssh-com-client.sh,v 1.4 2002/07/16 08:58:16 markus Exp $
 #	Placed in the Public Domain.
 
 tid="connect with ssh.com client"
@@ -15,7 +15,9 @@ VERSIONS="
 	2.3.1
 	2.4.0
 	3.0.0
-	3.1.0"
+	3.1.0
+	3.2.0
+	3.3.0"
 
 # 2.0.10 2.0.12 2.0.13 don't like the test setup
 
